removed old logo pngs created pngs : 1 for login 1 for reception 1 for create 1 for newuser and 1 for contactUs

--- a/Cloudental-cdi/src/main/webapp/screens/base/cloudent-template.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/base/cloudent-template.xhtml
@@ -4,6 +4,7 @@
 
 	<h:head>
 	  <title><ui:insert name="title">Cloudent 0.1</ui:insert></title>
+	  <ui:insert name="head"></ui:insert>
 	</h:head>
 
 	<body>
