--- a/Cloudental-cdi/src/main/webapp/screens/activities.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/activities.xhtml
@@ -1,17 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" 
-      xmlns:ui="http://java.sun.com/jsf/facelets" 
       xmlns:h="http://java.sun.com/jsf/html" 
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
 
-	<h:head>
-	<h:outputScript library="js" name="cloudental.js" />
-	<h:outputStylesheet name="cloudental.css" library="css" />
-	</h:head>
-
-	<h:form id="createActivityForm">
-		<p:panel header="Create Activity">
-		</p:panel>
-	</h:form>
+	<p:treeTable value="#{office.patientManagment.patientListRoot}" var="patient">
+		<p:column>
+			<f:facet name="header">Name</f:facet>
+			<h:outputText value="#{patient}" />
+		</p:column>
+		<p:column>
+			<f:facet name="header">Surname</f:facet>
+			<h:outputText value="#{patient}" />
+		</p:column>
+	</p:treeTable>		
 </html>
