--- a/Cloudental-cdi/src/main/webapp/screens/office.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/office.xhtml
@@ -31,12 +31,10 @@
 						<ui:include src="/screens/scheduler.xhtml"/>
 					</p:tab>
 					<p:tab id="patientsTab" title="Patients" titletip="Patient Management!">
-						<p:panel header="Patient Information">
 							<ui:include src="/screens/patients.xhtml"/>
-						</p:panel>
-						<p:panel header="Activities and Visits">
+						<!--  p:panel header="Activities and Visits">
 							<ui:include src="/screens/activities.xhtml"/>
-						</p:panel>
+						</p:panel -->
 					</p:tab>
 				</p:tabView>
 			</h:form>	 
