--- a/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
+++ b/Cloudental-cdi/src/main/webapp/screens/patients.xhtml
@@ -22,20 +22,20 @@
 	</p:panel>
 
  	<p:contextMenu for="patientList">  
-        <p:menuitem value="Delete" icon="ui-icon-close" actionListener="#{office.patientManagment.deletePatient}" 
-        	process="@this,patientList" update="patientList"/>
+        <p:menuitem value="Delete" icon="ui-icon-close" action="#{office.patientManagment.deletePatient}" />
     </p:contextMenu>  
     
-	<p:dataTable id="patientList" var="patient" value="#{office.patientManagment.patientList}"   
-		rowKey="#{patient.id}"  selection="#{office.patientManagment.selectedPatient}" selectionMode="single">
+	<p:dataTable id="patientList" var="patient" value="#{office.patientManagment.patientList}" scrollable="false"   
+		rowKey="#{patient.id}"  selection="#{office.patientManagment.selectedPatient}" selectionMode="single"
+		scrollHeight="400" scrollWidth="1000">
 	 				
-		<p:column headerText="id" sortBy="#{patient.id}" >
+		<p:column headerText="id" sortBy="#{patient.id}" width="100">
 			#{patient.id}  
 		</p:column>
-		<p:column headerText="Surname" sortBy="#{patient.name}" >
+		<p:column headerText="Surname" sortBy="#{patient.name}" width="400">
 			#{patient.name}  
 		</p:column>
-		<p:column headerText="Surname" sortBy="#{patient.surname}" >
+		<p:column headerText="Surname" sortBy="#{patient.surname}" width="800">
 			#{patient.surname}  
 		</p:column>
 	</p:dataTable>
